view all books button is added

--- a/Frontend/src/Pages/Aboutus/Aboutus.css
+++ b/Frontend/src/Pages/Aboutus/Aboutus.css
@@ -1,5 +1,6 @@
 .bgimagefortext {
     background-image: url("/public/slider1.jpg");
+    background-attachment: fixed;
     background-size: cover;
     height: 100%;
     width: 100%;
