--- a/Frontend/src/Pages/Home/Home.css
+++ b/Frontend/src/Pages/Home/Home.css
@@ -1,15 +1,81 @@
+.carousel-container {
+  position: fixed;
+}
+.carousel-text-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 50%; /* Cover the right half of the carousel */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.text-content {
+  text-align: center;
+  background: #000;
+  padding:10px;
+  border-radius : 10px; ;
+  color: rgb(255, 255, 255); /* Text color */
+}
+.carousel-text-overlay h1 {
+  font-size: 3rem; /* Adjust font size as needed */
+}
+.carousel-text-overlay p {
+  font-size: 1.5rem; /* Adjust font size as needed */
+}
 .container {
-    display: flex;
-    height: 100vh; /* Take up the full height of the viewport */
-  }
-  
-  .left-pane {
-    width: 50%; /* Take up half the width of the container */
-    background-color: rgb(255, 255, 255); /* Just for visualization */
-  }
-  
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+
+
+.left-pane {
+  width: 50%; /* Adjust as needed */
+  padding: 20px;
+}
+
+.right-pane {
+  width: 50%; /* Adjust as needed */
+  padding: 20px;
+}
+
+/* Media Query for Small Screens */
+@media screen and (max-width: 768px) {
+  .left-pane,
   .right-pane {
-    width: 50%; /* Take up half the width of the container */
-    background-color: rgb(255, 255, 255); /* Just for visualization */
+    width: 100%;
   }
+}
+
+
+
+
+
+
+.viewbuttons{
+ background:#e7d800; 
+ padding:10px;
+ border-radius: 10px;
+ border-color: #000;
+border-width: 2px;
+}
+
+
+
+
+
+
+
+#thebookscontent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#booksimage {
+  text-align: center;
+}
 
