--- a/Frontend/src/Pages/Home/Home.css
+++ b/Frontend/src/Pages/Home/Home.css
@@ -16,13 +16,13 @@
   background: #000;
   padding:10px;
   border-radius : 10px; ;
-  color: rgb(255, 255, 255); /* Text color */
+  color: rgb(255, 255, 255); 
 }
 .carousel-text-overlay h1 {
-  font-size: 3rem; /* Adjust font size as needed */
+  font-size: 3rem;
 }
 .carousel-text-overlay p {
-  font-size: 1.5rem; /* Adjust font size as needed */
+  font-size: 1.5rem; 
 }
 .container {
   display: flex;
@@ -34,12 +34,12 @@
 
 
 .left-pane {
-  width: 50%; /* Adjust as needed */
+  width: 50%; 
   padding: 20px;
 }
 
 .right-pane {
-  width: 50%; /* Adjust as needed */
+  width: 50%; 
   padding: 20px;
 }
 
@@ -79,3 +79,13 @@ border-width: 2px;
   text-align: center;
 }
 
+
+
+
+.homeleftcontent{
+  background: #e7d800;
+  border-radius: 10px;
+  padding: 10px;
+  border-color: #000;
+  border-width: 3px;
+}
