--- a/Frontend/src/Pages/Home/Home.css
+++ b/Frontend/src/Pages/Home/Home.css
@@ -1,6 +1,12 @@
 .carousel-container {
   position: fixed;
+  z-index: 1;
 }
+
+
+
+
+
 .carousel-text-overlay {
   position: absolute;
   top: 0;
@@ -28,6 +34,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 
 
 
