--- a/Frontend/src/components/Header/Header.css
+++ b/Frontend/src/components/Header/Header.css
@@ -1,17 +1,21 @@
-.close-button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 20px;
-    color: #000;
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2; 
   }
 
-#divofcrossinsidelogindiv{
-    margin-left: 250px;
+  
+  
 
-}
-
-#smalldiv {
+  #smalldiv {
+    padding: 5%;
     margin-top: 11%;
     margin-bottom: 11.75%;
     border-radius: 10px;
@@ -21,17 +25,15 @@
     align-items: center;
     border: 3px solid black;
     padding: 20px;    
-}
-
-#signup {
+  }
+  #submitoflogin {
     background: #1900ff;
     padding: 7px;
     padding-right: 10px;
     padding-left: 10px;
     border-radius: 5px;
 }
-
-#submitoflogin {
+  #signup {
     background: #1900ff;
     padding: 7px;
     padding-right: 10px;
