--- a/Frontend/src/Pages/Adminpanel/Adminpanel.css
+++ b/Frontend/src/Pages/Adminpanel/Adminpanel.css
@@ -6,3 +6,49 @@
     flex: 1;
     padding: 20px;
 }
+
+
+.adminh1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.adminform {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.adminlabel {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.admininput[type='text'],
+.admininput[type='password'] {
+    width: calc(100% - 20px);
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.adminbutton[type='submit'] {
+    margin-left:25% ;
+    width: 50%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.adminbutton[type='submit']:hover {
+    background-color: #0056b3;
+}
