--- a/Frontend/src/components/Onproductopen/OnUniformopen.css
+++ b/Frontend/src/components/Onproductopen/OnUniformopen.css
@@ -46,9 +46,12 @@
         margin-bottom: 10px;
         background: rgb(250 204 21);
         border-radius: 10px;
+        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+        transition: transform 0.3s ease;
     }
     .addtocartbutton:hover{
         background-color: rgb(183, 146, 0);
+        transform: scale(.9)
     }
 
     .orderbutton {
@@ -56,9 +59,14 @@
         margin-top: 10px;
         background: rgb(250 204 21);
         border-radius: 10px;
+        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+        transition: transform 0.3s ease;
+
     }
     .orderbutton:hover{
-        background-color: rgb(183, 146, 0);    }
+        background-color: rgb(183, 146, 0);
+        transform: scale(.9)
+    }
         
 }
 
