--- a/Frontend/src/components/ViewCart/OpenCartUniform.css
+++ b/Frontend/src/components/ViewCart/OpenCartUniform.css
@@ -1,3 +1,11 @@
+.backbutton{
+    margin: 20px 0px 0px 20px;
+    font-size: 30px;
+    border-radius: 50px;
+}
+.backbutton:hover{
+    box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
+}
 .parent-container {
     padding: 10%;
 }
