--- a/Frontend/src/components/ViewOrders/BookOrderOpen.css
+++ b/Frontend/src/components/ViewOrders/BookOrderOpen.css
@@ -1,3 +1,12 @@
+.backbutton{
+    margin: 20px 0px 0px 20px;
+    font-size: 30px;
+    border-radius: 50px;
+}
+.backbutton:hover{
+    box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
+}
+
 #parentofmaincontainer {
     padding: 10%;
 
