--- a/Frontend/src/components/Header/Header.css
+++ b/Frontend/src/components/Header/Header.css
@@ -1,52 +1,85 @@
+/* Header.css */
+
 .active {
   background-color: rgb(250 204 21);
   color: black;
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2; 
+}
+
+#dropdown-basic-button {
+  background: rgb(250 204 21);
+  padding-left: 20px;
+  padding-right: 20px;
+  border-width: 0px;
+}
+
+#smalldiv {
+  padding: 5%;
+  margin-top: 11%;
+  margin-bottom: 11.75%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid black;
+  padding: 20px;    
+}
+
+#submitoflogin, #signup {
+  background: #1900ff;
+  padding: 7px;
+  padding-right: 10px;
+  padding-left: 10px;
+  border-radius: 5px;
+}
+
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+  .header .container {
+    padding: 0;
+  }
+
+  .header .logo {
+    flex: 1;
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  .header .menu-toggle {
+    display: block;
+  }
+
+  .header .nav {
+    display: none;
+    flex-direction: column;
+    padding: 20px;
+    background-color: #fff;
+    position: absolute;
+    top: 70px;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2; 
+    border: 1px solid #ccc;
+    z-index: 1;
   }
 
-  #dropdown-basic-button{
-    background: rgb(250 204 21);
-    padding-left: 20px;
-    padding-right: 20px;
-    border-width: 0px;
-  }
-  
-
-  #smalldiv {
-    padding: 5%;
-    margin-top: 11%;
-    margin-bottom: 11.75%;
-    border-radius: 10px;
+  .header .nav.active {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 3px solid black;
-    padding: 20px;    
   }
-  #submitoflogin {
-    background: #1900ff;
-    padding: 7px;
-    padding-right: 10px;
-    padding-left: 10px;
-    border-radius: 5px;
-}
-  #signup {
-    background: #1900ff;
-    padding: 7px;
-    padding-right: 10px;
-    padding-left: 10px;
-    border-radius: 5px;
+
+  .header .nav .nav-item {
+    margin-bottom: 10px;
+  }
 }
